syntax = "proto3";

package proto;
option go_package = "./;proto";

service StreamService {
  // 1️⃣ 普通一元 RPC
  rpc SayHello(HelloRequest) returns (HelloResponse);

  // 2️⃣ 服务端流式 RPC
  rpc ListHello(HelloRequest) returns (stream HelloResponse);

  // 3️⃣ 客户端流式 RPC
  rpc RecordHello(stream HelloRequest) returns (HelloResponse);

  // 4️⃣ 双向流式 RPC
  rpc Chat(stream HelloRequest) returns (stream HelloResponse);
}

message HelloRequest {
  string name = 1;
}

message HelloResponse {
  string message = 1;
}

// protoc --go_out=./proto --go-grpc_out=./proto ./proto/stream.proto
